# corey-model-benchmark

./: .dockerignore  .gitignore  Dockerfile  PAPERCUTS.md  README.md  pyproject.toml
.github/workflows/: container.yml
benchmarks/: corey_v0.json  quinn_v1.json
src/corey_bench/: __init__.py  artifacts.py  cli.py  costing.py  graders.py  judging.py  model_cards.py  openrouter.py  protocol.py  report.py  reporting_v1.py  responses.py  runner.py  scoring.py  suite.py  telemetry.py  webapp.py
src/corey_bench/templates/: base.html  compare.html  gallery.html  index.html  model.html  models.html  pairwise.html  responses.html  review.html  run.html
tests/: test_cli.py  test_costing.py  test_graders_v1.py  test_judging.py  test_model_cards.py  test_openrouter.py  test_openrouter_v1.py  test_protocol_v1.py  test_report.py  test_report_v1.py  test_runner_v1.py  test_scoring.py  test_suite.py  test_webapp.py
