[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quinnferno"
version = "1.0.0"
description = "A durable web harness for the Quinn Eval Suite"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1,<4",
  "gunicorn>=23,<24",
  "opentelemetry-api>=1.37,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.37,<2",
  "opentelemetry-instrumentation-flask>=0.58b0,<1",
  "opentelemetry-sdk>=1.37,<2",
  "tiktoken>=0.11,<1",
]

[dependency-groups]
dev = [
  "pytest>=9.1,<10",
]

[project.scripts]
corey-bench = "corey_bench.cli:main"
quinn-evals = "corey_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/corey_bench"]

[tool.hatch.build.targets.wheel.force-include]
"benchmarks/quinn_v1.json" = "corey_bench/data/quinn_v1.json"
